Fix test files to use custom MCP implementation
Co-Authored-By: sivakumar.yepuru@ny.email.gs.com <sivakumar.yepuru@ny.email.gs.com>