@@ -1,15 +1,9 @@
 package com.example.springai.config;
 
+import com.example.springai.mcp.*;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
-import org.springframework.ai.chat.ChatClient;
-import org.springframework.ai.chat.ChatResponse;
-import org.springframework.ai.chat.Generation;
-import org.springframework.ai.chat.messages.AssistantMessage;
-import org.springframework.ai.chat.messages.Message;
-import org.springframework.ai.chat.messages.UserMessage;
-import org.springframework.ai.chat.prompt.Prompt;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -78,15 +72,11 @@ public class OllamaConfig {
                         messages.stream()
                             .map(message -> {
                                 ObjectNode msgNode = objectMapper.createObjectNode();
-                                if (message instanceof UserMessage) {
-                                    msgNode.put("role", "user");
-                                } else {
-                                    msgNode.put("role", "assistant");
-                                }
+                                msgNode.put("role", message.getRole());
                                 msgNode.put("content", message.getContent());
                                 return msgNode;
                             })
-                            .toList()
+                            .collect(java.util.stream.Collectors.toList())
                     );
                     
                     HttpEntity<String> request = new HttpEntity<>(requestBody.toString(), headers);
@@ -96,17 +86,17 @@ public class OllamaConfig {
                     JsonNode responseJson = objectMapper.readTree(response.getBody());
                     String content = responseJson.path("message").path("content").asText();
                     
-                    Generation generation = new Generation(new AssistantMessage(content).getContent());
+                    Generation generation = new Generation(content);
                     return new ChatResponse(java.util.List.of(generation));
                 } catch (Exception e) {
                     System.err.println("Error calling Ollama API: " + e.getMessage());
                     e.printStackTrace();
                     
-                    Generation generation = new Generation(new AssistantMessage(
+                    Generation generation = new Generation(
                         "I'm sorry, I encountered an error connecting to the Ollama API. " +
                         "Please make sure Ollama is running and the model '" + model + "' is available. " +
                         "Error: " + e.getMessage()
-                    ).getContent());
+                    );
                     return new ChatResponse(java.util.List.of(generation));
                 }
             }
